############################################################################
## SoXt/src/Inventor/Xt/sliders/Makefile.am
## $Id$

noinst_LTLIBRARIES = libSoXtSliderSets.la

INCLUDES = -I$(top_builddir)/src -I$(top_srcdir)/src
LIBS =

############################################################################

libSoXtSliderSets_la_SOURCES = \
	SoXtSliderSetModule.h \
	SoXtSliderSetModule.cpp \
	SoXtAmbientColorSliderModule.cpp \
	SoXtAmbientColorSliderModule.h \
	SoXtCenterSliderModule.cpp \
	SoXtCenterSliderModule.h \
	SoXtDiffuseColorSliderModule.cpp \
	SoXtDiffuseColorSliderModule.h \
	SoXtEmissiveColorSliderModule.cpp \
	SoXtEmissiveColorSliderModule.h \
	SoXtLightColorSliderModule.cpp \
	SoXtLightColorSliderModule.h \
	SoXtLightIntensitySliderModule.cpp \
	SoXtLightIntensitySliderModule.h \
	SoXtRotateSliderModule.cpp \
	SoXtRotateSliderModule.h \
	SoXtScaleSliderModule.cpp \
	SoXtScaleSliderModule.h \
	SoXtShininessSliderModule.cpp \
	SoXtShininessSliderModule.h \
	SoXtSpecularColorSliderModule.cpp \
	SoXtSpecularColorSliderModule.h \
	SoXtTranslateSliderModule.cpp \
	SoXtTranslateSliderModule.h \
	SoXtTransparencySliderModule.cpp \
	SoXtTransparencySliderModule.h

