############################################################################
## SoXt/src/Inventor/Xt/widgets/compound/Makefile.am
## $Id$

noinst_LTLIBRARIES = libSoXtCompoundWidgets.la

INCLUDES = -I$(top_builddir)/src -I$(top_srcdir)/src
LIBS =

libSoXtCompoundWidgets_la_SOURCES = \
	SoXtSlider.h \
	SoXtSlider.cpp \
	SoXtSliderManager.h \
	SoXtSliderManager.cpp

